[gd_scene load_steps=19 format=3 uid="uid://bexrbitexofj5"]

[ext_resource type="Script" uid="uid://bu36q2n7ew2bc" path="res://engine/ui/control_bar.gd" id="1_1yaeh"]
[ext_resource type="Texture2D" uid="uid://dcwampaec7u4d" path="res://style/ui/back.svg" id="2_04np7"]
[ext_resource type="Texture2D" uid="uid://cr2dyude0la27" path="res://style/ui/continue.svg" id="2_c07j1"]
[ext_resource type="Texture2D" uid="uid://c1o0auj6d0cva" path="res://style/ui/back_pressed.svg" id="3_o1rm5"]
[ext_resource type="Texture2D" uid="uid://bp8vp2o2r3syb" path="res://style/ui/continue_pressed.svg" id="3_unu3c"]
[ext_resource type="Texture2D" uid="uid://cbivgtnhuyxyn" path="res://style/ui/continue_hover.svg" id="4_66pkw"]
[ext_resource type="Texture2D" uid="uid://yimlrg4vlqgu" path="res://style/ui/back_hover.svg" id="4_a0385"]
[ext_resource type="Texture2D" uid="uid://bdnuj3k8yforc" path="res://style/ui/back_disabled.svg" id="5_o1rm5"]
[ext_resource type="Texture2D" uid="uid://dii1cpoahx2gs" path="res://style/ui/skip.svg" id="8_1ies0"]
[ext_resource type="Texture2D" uid="uid://caebaxc6yipme" path="res://style/ui/continue_disabled.svg" id="9_a0385"]
[ext_resource type="Texture2D" uid="uid://dgixigs0mnna2" path="res://style/ui/skip_pressed.svg" id="9_awgs5"]
[ext_resource type="Texture2D" uid="uid://dyl14gsp4h0fi" path="res://style/ui/skip_hover.svg" id="10_m858w"]
[ext_resource type="Texture2D" uid="uid://2jpcoabjx1f6" path="res://style/ui/skip_disabled.svg" id="13_1ies0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oin5q"]
bg_color = Color(0.241185, 0.299955, 0.438405, 0.533333)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n2tc0"]
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_left = 1.0
expand_margin_right = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eobuy"]
bg_color = Color(0.56, 0.2632, 0.332453, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wb2ej"]
bg_color = Color(0.38, 0.1368, 0.193547, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1q3dt"]
bg_color = Color(0.48, 0.264, 0.3144, 1)

[node name="ControlBar" type="MarginContainer" node_paths=PackedStringArray("back_button", "continue_button", "skip_button", "fullscreen_button", "quit_button", "slideshow_button", "slideshow_duration_spin_box")]
offset_right = 398.0
offset_bottom = 117.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12
script = ExtResource("1_1yaeh")
back_button = NodePath("NavigationButtonMc/HBoxContainer/BackButton")
continue_button = NodePath("NavigationButtonMc/HBoxContainer/ContinueButton")
skip_button = NodePath("NavigationButtonMc/HBoxContainer/SkipButton")
fullscreen_button = NodePath("NavigationButtonMc/HBoxContainer/WindowControlBox/FullscreenButton")
quit_button = NodePath("NavigationButtonMc/HBoxContainer/WindowControlBox/QuitButton")
slideshow_button = NodePath("NavigationButtonMc/HBoxContainer/SlideshowVBox/SlideshowButton")
slideshow_duration_spin_box = NodePath("NavigationButtonMc/HBoxContainer/SlideshowVBox/SlideshowDurationSpinBox")

[node name="BackgroundPanel" type="Panel" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_oin5q")

[node name="NavigationButtonMc" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="HBoxContainer" type="HBoxContainer" parent="NavigationButtonMc"]
layout_mode = 2

[node name="BackButton" type="TextureButton" parent="NavigationButtonMc/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("2_04np7")
texture_pressed = ExtResource("3_o1rm5")
texture_hover = ExtResource("4_a0385")
texture_disabled = ExtResource("5_o1rm5")

[node name="ContinueButton" type="TextureButton" parent="NavigationButtonMc/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("2_c07j1")
texture_pressed = ExtResource("3_unu3c")
texture_hover = ExtResource("4_66pkw")
texture_disabled = ExtResource("9_a0385")

[node name="SkipButton" type="TextureButton" parent="NavigationButtonMc/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("8_1ies0")
texture_pressed = ExtResource("9_awgs5")
texture_hover = ExtResource("10_m858w")
texture_disabled = ExtResource("13_1ies0")

[node name="VSeparator" type="VSeparator" parent="NavigationButtonMc/HBoxContainer"]
modulate = Color(1, 1, 1, 0.52549)
custom_minimum_size = Vector2(10, 60)
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 10
theme_override_styles/separator = SubResource("StyleBoxFlat_n2tc0")

[node name="SlideshowVBox" type="VBoxContainer" parent="NavigationButtonMc/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="SlideshowButton" type="Button" parent="NavigationButtonMc/HBoxContainer/SlideshowVBox"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 18
toggle_mode = true
text = "AUTO"

[node name="SlideshowDurationSpinBox" type="SpinBox" parent="NavigationButtonMc/HBoxContainer/SlideshowVBox"]
layout_mode = 2
min_value = 0.1
max_value = 240.0
step = 0.1
value = 3.0
alignment = 1
suffix = "s"

[node name="VSeparator2" type="VSeparator" parent="NavigationButtonMc/HBoxContainer"]
modulate = Color(1, 1, 1, 0.52549)
custom_minimum_size = Vector2(10, 60)
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 10
theme_override_styles/separator = SubResource("StyleBoxFlat_n2tc0")

[node name="WindowControlBox" type="VBoxContainer" parent="NavigationButtonMc/HBoxContainer"]
layout_mode = 2

[node name="QuitButton" type="Button" parent="NavigationButtonMc/HBoxContainer/WindowControlBox"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 20
theme_override_styles/hover = SubResource("StyleBoxFlat_eobuy")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wb2ej")
theme_override_styles/normal = SubResource("StyleBoxFlat_1q3dt")
text = "Ã—"

[node name="FullscreenButton" type="Button" parent="NavigationButtonMc/HBoxContainer/WindowControlBox"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 20
toggle_mode = true
text = "[  ]"

[connection signal="pressed" from="NavigationButtonMc/HBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="NavigationButtonMc/HBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="NavigationButtonMc/HBoxContainer/SkipButton" to="." method="_on_skip_button_pressed"]
[connection signal="toggled" from="NavigationButtonMc/HBoxContainer/SlideshowVBox/SlideshowButton" to="." method="_on_slideshow_button_toggled"]
[connection signal="value_changed" from="NavigationButtonMc/HBoxContainer/SlideshowVBox/SlideshowDurationSpinBox" to="." method="_on_slideshow_duration_spin_box_value_changed"]
[connection signal="pressed" from="NavigationButtonMc/HBoxContainer/WindowControlBox/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="toggled" from="NavigationButtonMc/HBoxContainer/WindowControlBox/FullscreenButton" to="." method="_on_fullscreen_button_toggled"]
